Formatting (#234)
* Major formatting

* Automatic code cleanup

* autoformatting

* Add chinease to language file (#233)

* Version 1.5

* Major formatting

* Automatic code cleanup

* autoformatting

---------

Co-authored-by: 5h1zuy4 <82523959+5h1zuy4@users.noreply.github.com>